fix: изменить выбрасывание некоторых исключений